Changed links in header

--- a/OTS_0.4/Assets/Resources/ApplicationStrings.resx
+++ b/OTS_0.4/Assets/Resources/ApplicationStrings.resx
@@ -184,4 +184,7 @@
   <data name="VendorsPageTitle" xml:space="preserve">
     <value>Vendors</value>
   </data>
+  <data name="MyAccountPageTitle" xml:space="preserve">
+    <value>My Account</value>
+  </data>
 </root>
