Cleaned up colors and shapes

--- a/OTS_0.4/Assets/Resources/ApplicationStrings.resx
+++ b/OTS_0.4/Assets/Resources/ApplicationStrings.resx
@@ -187,4 +187,7 @@
   <data name="MyAccountPageTitle" xml:space="preserve">
     <value>My Account</value>
   </data>
+  <data name="SignOutPageTitle" xml:space="preserve">
+    <value>Sign Out</value>
+  </data>
 </root>
